--- a/public/index.html
+++ b/public/index.html
@@ -47,14 +47,14 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-WWZVFFF1RH"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WWZVFFF1RH"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-WWZVFFF1RH');
-  </script> -->
+  </script>
 
   <div id="root"></div>
   <!--
